RESOLVED FIXED212617
AX: <address> element should no longer map to ARIA `contentinfo` role
https://bugs.webkit.org/show_bug.cgi?id=212617
Summary AX: <address> element should no longer map to ARIA `contentinfo` role
James Craig
Reported 2020-06-01 16:14:49 PDT
AX: <address> element should no longer map to ARIA `contentinfo` role; It should map to a generic AXGroup, identical to divRole. I saw someone mention this on a thread recently and checked. Sure enough, the role mapping changed at some point, so WebKit's implementation is now out of alignment. https://www.w3.org/TR/html-aam-1.0/
Attachments
patch (6.23 KB, patch)
2020-06-10 11:23 PDT, chris fleizach
no flags
patch (6.27 KB, patch)
2020-06-15 12:25 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2020-06-01 16:15:05 PDT
James Craig
Comment 2 2020-06-02 11:14:49 PDT
*** Bug 194654 has been marked as a duplicate of this bug. ***
chris fleizach
Comment 3 2020-06-10 11:23:02 PDT
chris fleizach
Comment 4 2020-06-15 12:25:40 PDT
EWS
Comment 5 2020-06-16 09:35:35 PDT
Committed r263096: <https://trac.webkit.org/changeset/263096> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401920 [details].
Note You need to log in before you can comment on or make changes to this bug.