AX: <address> element should no longer map to ARIA `contentinfo` role https://bugs.webkit.org/show_bug.cgi?id=212617 <rdar://problem/63848604>

Reviewed by Joanmarie Diggs.

Source/WebCore:

Change the mapping of <address> to be a basic group. Update tests.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):

LayoutTests:

* accessibility/mac/landmark-not-ignored-expected.txt:
* accessibility/mac/landmark-not-ignored.html:
* platform/mac-wk2/accessibility/roles-exposed-expected.txt:
* platform/mac/accessibility/roles-exposed-expected.txt:
* platform/win/accessibility/roles-exposed-expected.txt:


Canonical link: https://commits.webkit.org/226033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263096 268f45cc-cd09-0410-ab3c-d52691b4dbfc